fix(admin) OpenAPI doc for AccountsController